src/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions</description>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HS Diploma,</fullName>
                </value>
                <value>
                    <fullName>BA/BS,</fullName>
                </value>
                <value>
                    <fullName>MA,MS,MBA,</fullName>
                </value>
                <value>
                    <fullName>Ph.D</fullName>
                </value>
                <value>
                    <fullName>Post Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Photo__c, &apos;Photo Unavailable&apos;, 200, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <formula>IMAGE( Photo__c, &apos;Image Not Available&apos;, 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Email_Suffix</fullName>
        <active>true</active>
        <description>Email of Candidate only available if it end with suffix @mulodo.com</description>
        <errorConditionFormula>AND(
	NOT(ISBLANK(Email__c)),
	NOT(REGEX( Email__c ,&quot;\\w([^@\\s,;]+)@(mulodo\\.com)&quot;))
)</errorConditionFormula>
        <errorMessage>Email of Candidate only available if it end with suffix @mulodo.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Birthday</fullName>
        <active>true</active>
        <description>Candidates age should be greater than 16</description>
        <errorConditionFormula>NOT(ISBLANK(Birthday__c))&amp;&amp; ((YEAR(TODAY()) - YEAR(Birthday__c)) &lt; 16)</errorConditionFormula>
        <errorMessage>Candidates age should be greater than 16</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Length</fullName>
        <active>true</active>
        <description>Phone Length should be between 10 and 11 number</description>
        <errorConditionFormula>LEN(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;)) &lt;10 || LEN(SUBSTITUTE(Phone__c, &quot; &quot;,&quot;&quot;)) &gt; 11</errorConditionFormula>
        <errorMessage>Phone Length should be between 10 and 11 number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_OnlyDigit</fullName>
        <active>true</active>
        <description>Phone should contains  only digit</description>
        <errorConditionFormula>NOT(REGEX( Phone__c , &quot;^[0-9 ]+$&quot;))</errorConditionFormula>
        <errorMessage>Phone should contains only digit and whitespace</errorMessage>
    </validationRules>
</CustomObject>